--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
     <div class="card-container">
         <div class="card">
           <img src="img/img1.jpg" alt="Image 1">
-          <h2>Wathing Series</h2>
-          <p>I love watching series. i often watch series with comedy-drama genre.</p>
+          <h2>Watching Series</h2>
+          <p>I love watching series. I often watch series with comedy-drama genre. Here is one of my favorite series that I've watched.</p>
           <a href="https://www.netflix.com/ph-en/title/81025696" class="button">Open</a>
         </div>
         <div class="card">
           <img src="img/img2.jpg" alt="Image 2">
           <h2>Listening to Music</h2>
-          <p>Listening to music makes me think and analyze things more clear.</p>
+          <p>Listening to music makes me think and analyze things more clear. Here is one of the playlist that I often listen to.</p>
           <a href="https://open.spotify.com/playlist/4Yz3tBiB0ShnvTJ0yAwizA?si=2d495ae98b6540e6" class="button">Open</a>
         </div>
         <div class="card">
             <img src="img/img3.jpg" alt="Image 3">
             <h2>Reading Books</h2>
-            <p>I love reading fictional books. My most red genre is mystery/thriller.</p>
+            <p>I love reading fictional books. My most red genre is mystery/thriller. Here is one of the book I've red that I really enjoyed the flow of the story.</p>
             <a href="https://www.wattpad.com/story/4499067-the-peculiars%27-tale" class="button">Open</a>
           </div>
       </div>   
