--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="card">
             <img src="img/img3.jpg" alt="Image 3">
             <h2>Reading Books</h2>
-            <p>I love reading fictional books. My most red genre is mystery/thriller. Here is one of the book I've red that I really enjoyed the flow of the story.</p>
+            <p>I love reading fictional books. My most red genre is mystery/thriller. Here is one of the book I really love.</p>
             <a href="https://www.wattpad.com/story/4499067-the-peculiars%27-tale" class="button">Open</a>
           </div>
       </div>   
